[project]
name = "pdfchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "streamlit>=1.46.1",
    "textwrap3>=0.9.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
