[project]
name = "pdfchat"
version = "2.0.0"
description = "Enhanced PDFChat RAG Application with advanced features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "streamlit>=1.46.1",
    "textwrap3>=0.9.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
